# mlc

./: CMakeLists.txt  README.md  avx.c  avx.h  avx_ops.c  avx_ops.h  build.bat  build.sh  config.c  config.h  cuda.cu  cuda.h  cuda_ops.cu  cuda_ops.h  data.c  data.h  debug.c  debug.h  define.h  device.c  device.h  device_manager.c  device_manager.h  dtype.c  dtype.h  dynarray.h  function.c  function.h  gemm.h  intrinsics.h  io.h  main.c  memory_pool.c  memory_pool.h  mempool.c  mempool.h  mlops.h  nn.c  nn.h  ops.c  (+8 more)
core/: config.c  config.h  deep_time.c  deep_time.h  define.h  device.c  device.h
core/mempool/: global.c  global.h  memblock.c  mempool.h  pool.c  state_manager.c  state_manager.h  subblock.c
core/types/: dtype.h  float16.c  float16.h
data/: arr.c  arr.h  arrset.c  arrset.h  data.c  data.h  dataset.c  dataset.h  subarrset.c  subarrset.h  subset.c  subset.h
logging/: table_cmd.c  table_cmd.h
ops/: avx.c  cuda_binary_ops.cu  cuda_binary_ops.h  cuda_ops.cu  cuda_ops.h  intel_binary_ops.c  intel_binary_ops.h  intel_intrinsics.c  intel_intrinsics.h  intrinsics.c  intrinsics.h  ops.c  ops.h  sse.c
